Bug #15791
Journal IO error results in failed assertion in AioCompletion
Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:
0%
Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Related issues
History
#1 Updated by Jason Dillaman over 6 years ago
#2 Updated by Jason Dillaman over 6 years ago
- Status changed from In Progress to Fix Under Review
#3 Updated by Jason Dillaman over 6 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler over 6 years ago
- Copied to Backport #16210: jewel: Journal IO error results in failed assertion in AioCompletion added
#5 Updated by Jason Dillaman over 6 years ago
- Status changed from Pending Backport to Resolved